--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,11 @@ body {
   font-size: 8pt;
   float: right;
 }
+
+.mat-dialog-container{
+  height: fit-content!important;
+}
+
+.mat-dialog-content{
+  overflow: hidden!important;
+}
