--- a/src/app/components/dialog/AddDialog/add.dialog.html
+++ b/src/app/components/dialog/AddDialog/add.dialog.html
@@ -26,7 +26,7 @@
     </div>
 
     <div mat-dialog-actions>
-        <button mat-button [type]="submit" [disabled]="!formControl.valid" [mat-dialog-close]="1" (click)="confirmAdd()">Save</button>
+        <button mat-button [type]="submit" [disabled]="!formControl.valid"  (click)="confirmAdd()">Save</button>
         <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
       </div>
   </form>
