--- a/src/app/components/dialog/EditDialog/edit.dialog.html
+++ b/src/app/components/dialog/EditDialog/edit.dialog.html
@@ -11,7 +11,7 @@
 
     <div class="form">
       <mat-form-field color="primary">
-        <input matInput #input class="form-control" placeholder="CV" [(ngModel)]="data.CV" name="CV" required>
+        <input type="number" step=".1" matInput #input class="form-control" placeholder="CV" [(ngModel)]="data.CV" name="CV" required>
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
@@ -26,7 +26,7 @@
     </div>
 
     <div mat-dialog-actions>
-      <button mat-button [type]="submit" [disabled]="!formControl.valid" [mat-dialog-close]="1" (click)="stopEdit()">Save</button>
+      <button mat-button [type]="submit" [disabled]="!formControl.valid" (click)="stopEdit()">Save</button>
       <button mat-button (click)="onNoClick()" tabindex="-1">Cancel</button>
     </div>
   </form>
