--- a/src/app/components/table-http/table-http.html
+++ b/src/app/components/table-http/table-http.html
@@ -3,7 +3,7 @@
        *ngIf="isLoadingResults || isRateLimitReached">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
     <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
-      GitHub's API rate limit has been reached. It will be reset in one minute.
+       API rate limit has been reached. It will be reset in one minute.
     </div>
   </div>
 
